完善播放列表

--- a/kuwo/client/package.json
+++ b/kuwo/client/package.json
@@ -1,5 +1,8 @@
 {
 	"name" : "chatroom",
 	"version" : "0.0.10",
-	"main" : "main.js"
+	"main" : "main.js",
+	"dependencies": {
+		"chokidar": "*"
+	}
 }
