--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /*/*/node_modules
 /*/*/*/node_modules
 /kuwo/client/Data/song-list.json
+/TDDFORCSHARP/TestResults
+/TDDFORCSHARP/TDDFORCSHARP/obj/Debug
